# mlops-federated-learning

./: .dockerignore  .flake8  CICD_GUIDE.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  deploy.ps1  deploy.sh  docker-compose.yml  evaluation_report.md  model_api.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: mlops-ci-cd.yml  model-training.yml  monitoring.yml
tests/: test_data_ingestion.py  test_federated_utils.py  test_mlops_system.py  test_model.py
