[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
# Exclude specific files and directories
/(
    \.git
  | \.github
  | __pycache__
  | \.pytest_cache
  | \.tox
  | \.venv
  | venv
  | env
  | dist
  | build
  | docs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
skip_glob = [
    "**/__pycache__/*",
    "**/.*",
    "**/docs/*",
    "**/build/*",
    "**/dist/*"
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"